--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ click = "^8.1.7"
 [tool.poetry.group.dev.dependencies]
 types-pygit2 = "^1.15.0.20240822"
 
+[tool.poetry.scripts]
+p4-git-submodule = "p4_git_submodule.cli:main"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
