--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 p4python = "^2024.1.2645203"
 pygit2 = "^1.15.1"
 click = "^8.1.7"
+tomlkit = "^0.13.2"
 
 [tool.poetry.group.dev.dependencies]
 types-pygit2 = "^1.15.0.20240822"
