--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "p4-git-submodule"
+name = "p4submodule"
 version = "0.1.0"
 description = "A tool for managing git repositories inside of Perforce depots"
 authors = ["Colden Cullen <ccullen@secretdimension.com>"]
@@ -18,7 +18,7 @@ paramiko = "^3.5.0"
 types-pygit2 = "^1.15.0.20240822"
 
 [tool.poetry.scripts]
-p4-git-submodule = "p4_git_submodule.cli:main"
+p4submodule = "p4submodule.cli:main"
 
 [build-system]
 requires = ["poetry-core"]
