--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ tomlkit = "^0.13.2"
 paramiko = "^3.5.0"
 
 [tool.poetry.group.dev.dependencies]
+types-paramiko = "^3.5.0.20240928"
 types-pygit2 = "^1.15.0.20240822"
+mypy = "^1.13.0"
 
 [tool.poetry.scripts]
 p4submodule = "p4submodule.cli:main"
@@ -23,3 +25,5 @@ p4submodule = "p4submodule.cli:main"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
