--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ paramiko = "^3.5.0"
 types-paramiko = "^3.5.0.20240928"
 types-pygit2 = "^1.15.0.20240822"
 pytype = "^2024.10.11"
+jinja2 = "^3.1.4"
+types-jinja2 = "^2.11.9"
 
 [tool.poetry.scripts]
 p4submodule = "p4submodule.cli:main"
