--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,10 +1,11 @@
-name: push
+name: Push
 
 on:
   push:
 
 jobs:
   build:
+    name: Build & Check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,16 +18,20 @@ jobs:
           python-version: "3.11"
           cache: "poetry"
 
-      - run: poetry check
+      - name: Poetry Check
+        run: poetry check
 
-      - name: poetry install
+      - name: Poetry Install
         run: poetry install --no-interaction
 
-      - run: poetry build
+      - name: Build
+        run: poetry build
 
-      - run: poetry run pytype
+      - name: Pytype
+        run: poetry run pytype
 
   generate-readme:
+    name: Generate Readme
     runs-on: ubuntu-latest
     needs: build
     permissions:
@@ -39,17 +44,17 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.13"
           cache: "poetry"
 
-      - name: poetry install
+      - name: Poetry Install
         run: poetry install --with dev --no-interaction
 
-      - name: generate readme
+      - name: Generate Readme
         run: poetry run python scripts/genreadme.py --module p4submodule.cli --template ./README.md.in --out README.md
 
-      - name: commit changes
-        uses: stefanzweifel/git-auto-commit-action@v5
+      - name: Commit Changes
+        uses: stefanzweifel/git-auto-commit-action@v6
         with:
           commit_message: "Update README"
           file_pattern: "README.md"
