--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "msgspec (==0.19.0)",
 ]
 
+[project.urls]
+repository = "https://github.com/secretdimension/p4submodule"
+
 [tool.poetry]
 classifiers = [
     "Environment :: Console",
