--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: © 2025 Secret Dimension, Inc. <info@secretdimension.com>. All Rights Reserved.
+#
+# SPDX-License-Identifier: Apache-2.0
+
 [project]
 name = "p4submodule"
 version = "1.0.2"
@@ -5,7 +9,7 @@ description = "A tool for managing git repositories inside of Perforce depots"
 authors = [
     { name = "Colden Cullen", email = "<ccullen@secretdimension.com>" },
 ]
-license = "MIT"
+license = "Apache-2.0"
 readme = "README.md"
 requires-python = ">=3.11"
 dynamic = [ "classifiers" ]
