--- a/tests/submodule.toml
+++ b/tests/submodule.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: © 2025 Secret Dimension, Inc. <info@secretdimension.com>. All Rights Reserved.
+#
+# SPDX-License-Identifier: Apache-2.0
+
 name = "Root"
 remote = "https://github.com/SecretDimension/p4submodule"
 tracking = "main"
