--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ default_stages:
 
 default_install_hook_types:
   - pre-commit
+  - post-checkout
+  - post-merge
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -29,3 +31,15 @@ repos:
       - id: detect-private-key
       - id: end-of-file-fixer
       - id: trailing-whitespace
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: "2.1.3"
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
+      - id: poetry-install
+
+  - repo: https://github.com/fsfe/reuse-tool
+    rev: v5.0.2
+    hooks:
+      - id: reuse-lint-file
