fix(ci): run generated README.md file through pre-commit

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -57,6 +57,12 @@ jobs:
       - name: Generate Readme
         run: poetry poe genreadme
 
+        # Ensure README.md will pass pre-commit checks
+      - uses: pre-commit/action@v3.0.1
+        with:
+          extra_args: --files README.me end-of-file-fixer
+        continue-on-error: true
+
       - name: Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v6
         with:
