--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -60,7 +60,7 @@ jobs:
         # Ensure README.md will pass pre-commit checks
       - uses: pre-commit/action@v3.0.1
         with:
-          extra_args: --files README.me end-of-file-fixer
+          extra_args: --files README.md end-of-file-fixer
         continue-on-error: true
 
       - name: Commit Changes
